Give featured image min-height to ensure it displays on mobile

--- a/assets/_sass/components/_post-block.scss
+++ b/assets/_sass/components/_post-block.scss
@@ -260,6 +260,12 @@
       }
     }
 
+    .post-block--featured & {
+      @include breakpoint($break: 'medium', $dir: 'max-width') {
+        min-height: 150px;
+      }
+    }
+
     img {
       $sizes: ('small', 'medium', 'large');
       display: block;
